--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@vue/cli-plugin-babel": "^3.0.0-rc.7",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.7",
     "@vue/cli-service": "^3.0.0-rc.7",
-    "vue-template-compiler": "^2.5.16"
+    "vue-router": "^3.0.1",
+    "vue-template-compiler": "^2.5.16",
+    "vuex": "^3.0.1"
   },
   "eslintConfig": {
     "root": true,
