--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "@vue/cli-plugin-babel": "^3.0.0-rc.7",
     "@vue/cli-plugin-eslint": "^3.0.0-rc.7",
     "@vue/cli-service": "^3.0.0-rc.7",
+    "postcss-import": "^11.1.0",
+    "postcss-loader": "^2.1.6",
+    "tailwindcss": "^0.6.4",
+    "vue-loader": "^15.2.6",
     "vue-router": "^3.0.1",
     "vue-template-compiler": "^2.5.16",
     "vuex": "^3.0.1"
